              (Kay Kay, Noble Paul, shalin)

9. SOLR-1120: Simplified EntityProcessor API by moving logic for applying transformers and handling multi-row outputs
              from Transformers into an EntityProcessorWrapper class. The behavior of the method
              EntityProcessor#destroy has been modified to be called once per parent-row at the end of row. A new
              method EntityProcessor#close is added which is called at the end of import. A new method
              Context#getResolvedEntityAttribute is added which returns the resolved value of an entity's attribute.
              Introduced a DocWrapper which takes care of maintaining document level session variables.
              (Noble Paul, shalin)

10.SOLR-1265: Add variable resolving for URLDataSource properties like baseUrl.  (Chris Eldredge via ehatcher)

================== Release 1.3.0 20080915 ==================

Status
------
This is the first release since DataImportHandler was added to the contrib solr distribution.
The following changes list changes since the code was introduced, not since
the first official release.


Detailed Change List
--------------------

New Features
1. SOLR-700:  Allow configurable locales through a locale attribute in fields for NumberFormatTransformer.
              (Stefan Oestreicher, shalin)

Changes in runtime behavior

Bug Fixes
1. SOLR-704:  NumberFormatTransformer can silently ignore part of the string while parsing. Now it tries to
              use the complete string for parsing. Failure to do so will result in an exception.
              (Stefan Oestreicher via shalin)

2. SOLR-729:  Context.getDataSource(String) gives current entity's DataSource instance regardless of argument.
              (Noble Paul, shalin)

3. SOLR-726:  Jdbc Drivers and DataSources fail to load if placed in multicore sharedLib or core's lib directory.
              (Walter Ferrara, Noble Paul, shalin)

Other Changes

