@@ -306,6 +306,9 @@ Other
 
 10.SOLR-1265: Add variable resolving for URLDataSource properties like baseUrl.  (Chris Eldredge via ehatcher)
 
+11.SOLR-1269: Better error messages from JdbcDataSource when JDBC Driver name or SQL is incorrect.
+              (ehatcher, shalin)
+
 ================== Release 1.3.0 20080915 ==================
 
 Status
